--- a/preterm_v0.1.ipynb
+++ b/preterm_v0.1.ipynb
@@ -201,9 +201,51 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>HN</th>\n",
+       "      <th>age</th>\n",
+       "      <th>parity</th>\n",
+       "      <th>previous preterm</th>\n",
+       "      <th>GA</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>Cx dilate</th>\n",
+       "      <th>Cx efface</th>\n",
+       "      <th>MR</th>\n",
+       "      <th>UC interval</th>\n",
+       "      <th>UC duration</th>\n",
+       "      <th>fever</th>\n",
+       "      <th>WBC_CBC</th>\n",
+       "      <th>neutrophil</th>\n",
+       "      <th>WBC_UA</th>\n",
+       "      <th>CS</th>\n",
+       "      <th>tocolytic_group</th>\n",
+       "      <th>tocolytic_seq</th>\n",
+       "      <th>smoking</th>\n",
+       "      <th>result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([0, 1])"
+       "Empty DataFrame\n",
+       "Columns: [HN, age, parity, previous preterm, GA, BMI, Cx dilate, Cx efface, MR, UC interval, UC duration, fever, WBC_CBC, neutrophil, WBC_UA, CS, tocolytic_group, tocolytic_seq, smoking, result]\n",
+       "Index: []"
       ]
      },
      "execution_count": 2,
@@ -213,8 +255,10 @@
    ],
    "source": [
     "#check null\n",
-    "df.isnull().values.any()\n",
-    "df[\"previous preterm\"].unique()"
+    "print(df.isnull().values.any())\n",
+    "df[\"WBC_UA\"].unique()\n",
+    "\n",
+    "#df[df[\"WBC_UA\"] == '10-2']"
    ]
   },
   {
@@ -254,7 +298,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(200, 44)\n",
+      "(200, 43)\n",
       "   age  parity  previous preterm   GA   BMI  Cx dilate  Cx efface  MR  \\\n",
       "0   27       2                 0  196  23.3          1         80   0   \n",
       "1   27       1                 0  216  19.2          1         25   0   \n",
@@ -262,12 +306,12 @@
       "3   27       1                 0  208  31.8          7         80   1   \n",
       "4   37       3                 1  192  23.1          5         70   1   \n",
       "\n",
-      "   UC interval  UC duration      ...        WBC_UA_1-2  WBC_UA_10-2  \\\n",
-      "0            4           40      ...                 1            0   \n",
-      "1            4           50      ...                 1            0   \n",
-      "2            3           60      ...                 0            0   \n",
-      "3            2           50      ...                 0            0   \n",
-      "4            3           60      ...                 0            0   \n",
+      "   UC interval  UC duration      ...        WBC_UA_0-1  WBC_UA_1-2  \\\n",
+      "0            4           40      ...                 0           1   \n",
+      "1            4           50      ...                 0           1   \n",
+      "2            3           60      ...                 0           0   \n",
+      "3            2           50      ...                 1           0   \n",
+      "4            3           60      ...                 0           0   \n",
       "\n",
       "   WBC_UA_10-20  WBC_UA_100  WBC_UA_2-3  WBC_UA_20-30  WBC_UA_3-5  \\\n",
       "0             0           0           0             0           0   \n",
@@ -283,7 +327,7 @@
       "3             0            0              0  \n",
       "4             0            0              0  \n",
       "\n",
-      "[5 rows x 44 columns]\n",
+      "[5 rows x 43 columns]\n",
       "['age' 'parity' 'previous preterm' 'GA' 'BMI' 'Cx dilate' 'Cx efface' 'MR'\n",
       " 'UC interval' 'UC duration' 'fever' 'WBC_CBC' 'neutrophil' 'smoking'\n",
       " 'result' 'CS_E.coli' 'CS_NG' 'CS_beta hemolytic streptococcus gr.B'\n",
@@ -294,8 +338,8 @@
       " 'tocolytic_group_adalat,bricanyl' 'tocolytic_group_bricanyl'\n",
       " 'tocolytic_seq_adalat' 'tocolytic_seq_adalat,bricanyl'\n",
       " 'tocolytic_seq_bricanyl' 'tocolytic_seq_bricanyl,adalat' 'WBC_UA_0-1'\n",
-      " 'WBC_UA_1-2' 'WBC_UA_10-2' 'WBC_UA_10-20' 'WBC_UA_100' 'WBC_UA_2-3'\n",
-      " 'WBC_UA_20-30' 'WBC_UA_3-5' 'WBC_UA_30-50' 'WBC_UA_5-10' 'WBC_UA_50-100']\n"
+      " 'WBC_UA_1-2' 'WBC_UA_10-20' 'WBC_UA_100' 'WBC_UA_2-3' 'WBC_UA_20-30'\n",
+      " 'WBC_UA_3-5' 'WBC_UA_30-50' 'WBC_UA_5-10' 'WBC_UA_50-100']\n"
      ]
     }
    ],
@@ -316,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -325,9 +369,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(160, 43)\n",
+      "(160, 42)\n",
       "(160, 1)\n",
-      "(40, 43)\n",
+      "(40, 42)\n",
       "(40, 1)\n"
      ]
     }
@@ -351,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -445,7 +489,7 @@
        "12  0.90625       1"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -485,7 +529,7 @@
        "0.8034188034188035"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
